--- a/demoApp/src/templates/home.html
+++ b/demoApp/src/templates/home.html
@@ -22,30 +22,28 @@
     <!--</md-tabs>-->
 <!--</md-content>-->
 
-<div layout="row">
-    <div flex class="md-whiteframe-7dp" layout-margin>
 
-    </div>
-    <div flex="62" class="md-whiteframe-7dp">
-        <img class="sail-boat" src="images/sailboat.jpg">
-    </div>
-    <div flex class="md-whiteframe-7dp" layout-margin>
+<md-content class="ship-container bgi white-text" layout-padding hide-xs>
+    <h1>Navigate the course to retirement</h1>
 
-    </div>
-</div>
+    <h1>Start voyaging....</h1>
+</md-content>
 
-<div layout="row" layout-xs="column">
-    <div flex class="md-whiteframe-7dp container one" layout-margin layout-padding>
+<div layout="row" layout-sm="column" layout-xs="column">
+    <div class="md-whiteframe-7dp container one" layout-margin layout-padding>
         <h2>How to keep your retirement on course?</h2>
         <md-button class="md-raised">Map your course</md-button>
     </div>
-    <div flex class="md-whiteframe-7dp container two" layout-margin layout-padding>
+    <div class="md-whiteframe-7dp container two" layout-margin layout-padding>
         <h2>Navigate your path to financial independence</h2>
         <md-button class="md-raised">Compass</md-button>
     </div>
-    <div flex class="md-whiteframe-7dp container three" layout-margin layout-padding>
+    <div class="md-whiteframe-7dp container three" layout-margin layout-padding>
         <h2>See what our funds can do for you</h2>
         <md-button class="md-raised">Funds</md-button>
     </div>
 </div>
+
+
+
 
