Changing css and making account page changes

--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -77,3 +77,24 @@
 .ship-container {
   height: 800px;
 }
+
+.accountHeader{
+    height:300px;
+    width:100%;
+    background-color: #D4CFC3;
+}
+
+.accountTableHeader{
+    width:20%;
+    color:white;
+}
+
+.accountTableItem{
+    width:20%;
+    padding:5px;
+}
+
+.headerRow{
+    background-color:#96151d;
+    padding:10px;
+}
