--- a/demoApp/src/templates/account.html
+++ b/demoApp/src/templates/account.html
@@ -1,1 +1,20 @@
-<h1 class="md-display-2">Account information</h1>
+<h2 class="md-display-2">Account information</h2>
+<h3 class="md-subhead">Hi, John P Investor</h3>
+<div class = "accountHeader">
+    <div layout="row" class="zero headerRow">
+        <div class='accountTableHeader'>Account</div>
+        <div class='accountTableHeader'>Account Number</div>
+        <div class='accountTableHeader'>Balance</div>
+    </div>
+    <div layout="row" class="zero md-body-1">
+        <div class='accountTableItem'>Brokerage</div>
+        <div class='accountTableItem'>9489494949</div>
+        <div class='accountTableItem'>$400,909</div>
+    </div>
+    <div layout="row" class="zero md-body-1">
+        <div class='accountTableItem'>Retirement</div>
+        <div class='accountTableItem'>393939</div>
+        <div class='accountTableItem'>$133,300,909</div>
+    </div>
+
+</div>
