--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -77,3 +77,28 @@
 .ship-container {
   height: 800px;
 }
+
+.chat-send-btn {
+    display: inline-block;
+}
+
+.chat {
+     border-style: solid;
+     border-width: 5px;
+     border-color: white;
+     width: 350px;
+}
+
+.chat-window {
+     background-color: white;
+}
+
+.userChat {
+    background-color: green;
+    border-radius: 25px;
+}
+
+.botChat {
+    background-color: blue;
+    border-radius: 25px;
+}
