--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -108,11 +108,11 @@
      border-style: solid;
      border-width: 5px;
      border-color: white;
-     width: 350px;
 }
 
 .chat-window {
-     background-color: white;
+     width: 350px;
+     height: 350px;
 }
 
 .userChat {
@@ -121,6 +121,6 @@
 }
 
 .botChat {
-    background-color: blue;
+    background-color: orange;
     border-radius: 25px;
 }
