adding fake stuff

--- a/demoApp/src/templates/account.html
+++ b/demoApp/src/templates/account.html
@@ -17,4 +17,11 @@
         <div class='accountTableItem'>$133,300,909</div>
     </div>
 
+    <div layout="row">
+        <div>
+            <h3>Performance</h3>
+            <img class='chart' src='images/fakePerformance.jpg'/>
+        </div>
+    </div>
+
 </div>
