--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -79,7 +79,7 @@
 }
 
 .accountHeader{
-    height:300px;
+    height:100%;
     width:100%;
     background-color: #D4CFC3;
 }
@@ -123,4 +123,10 @@
 .botChat {
     background-color: blue;
     border-radius: 25px;
+}
+
+.chart{
+    width:300px;
+    height:300px;
+    display:block;
 }
