--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -130,3 +130,51 @@
     height:300px;
     display:block;
 }
+
+.accountHeader{
+    height:100%;
+    width:100%;
+    background-color: #D4CFC3;
+}
+
+.accountTableHeader{
+    width:20%;
+    color:white;
+}
+
+.accountTableItem{
+    width:20%;
+    padding:5px;
+}
+
+.headerRow{
+    background-color:#96151d;
+    padding:10px;
+}
+
+
+.chat-send-btn {
+    display: inline-block;
+}
+
+.chat {
+     border-style: solid;
+     border-width: 5px;
+     border-color: white;
+
+}
+
+.chat-window {
+     width: 350px;
+     height: 350px;
+}
+
+.userChat {
+    background-color: green;
+    border-radius: 25px;
+}
+
+.botChat {
+    background-color: orange;
+    border-radius: 25px;
+}
