--- a/demoApp/src/templates/home.html
+++ b/demoApp/src/templates/home.html
@@ -2,12 +2,30 @@
     <h1>Navigate the course to retirement</h1>
 
     <h1>Start voyaging....</h1>
+    <div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl">
+        <div layout="row" layout-align="end end">
+            <div class="demo-md-panel-content">
+                <md-button class="md-fab md-primary" aria-label="Chat" ng-click="ctrl.showDialog($event)">
+                    <i class="material-icons">chat_bubble_outline</i>
+                </md-button>
+            </div>
+        </div>
+    </div>
 </md-content>
 
 <div layout="row" layout-sm="column" layout-xs="column">
     <div class="md-whiteframe-7dp container one" layout-margin layout-padding>
         <h2>How to keep your retirement on course?</h2>
         <md-button class="md-raised">Map your course</md-button>
+        <div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl" hide-gt-xs>
+            <div layout="row" layout-align="end end">
+                <div class="demo-md-panel-content">
+                    <md-button class="md-fab md-primary" aria-label="Chat" ng-click="ctrl.showDialog($event)">
+                        <i class="material-icons">chat_bubble_outline</i>
+                    </md-button>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="md-whiteframe-7dp container two" layout-margin layout-padding>
         <h2>Navigate your path to financial independence</h2>
