--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -128,13 +128,13 @@
 .chart{
     width:300px;
     height:300px;
-    display:block;
 }
 
 .accountHeader{
     height:100%;
     width:100%;
     background-color: #D4CFC3;
+    min-height: 400px;
 }
 
 .accountTableHeader{
@@ -178,3 +178,10 @@
     background-color: orange;
     border-radius: 25px;
 }
+
+.contactContainer{
+    background-color: #D4CFC3;
+    width:100%;
+    height:100^;
+}
+
