--- a/demoApp/src/templates/account.html
+++ b/demoApp/src/templates/account.html
@@ -18,7 +18,7 @@
     </div>
 
     <div layout="row">
-        <div>
+        <div flex class='flex'>
             <h3>Performance</h3>
             <img class='chart' src='images/fakePerformance.jpg'/>
         </div>
