app.css style for contacts contacts.html dummy page index.html correct contact link for mobile view

--- a/demoApp/src/templates/contact.html
+++ b/demoApp/src/templates/contact.html
@@ -1,1 +1,62 @@
 <h1 class="md-display-2">Contact Us</h1>
+
+<div>
+    <md-content class="md-padding">
+        <div flex-xs=""  layout="row" layout-sm="column" layout-xs="column" class="layout-row flex-xs ">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" >
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">Voyager Call Center</span>
+                        <span class="md-subhead">For information on mutual funds, IRAs, individual and joint accounts, and taxable accounts</span>
+                        <br>
+                        <span class="">Contact: 555-555-5555</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                        <div class="md-media-lg card-media"></div>
+                    </md-card-title-media>
+                </md-card-title>
+                <md-card-actions layout="row" layout-align="end center">
+                    <md-button>Call</md-button>
+                    <md-button>Email</md-button>
+                </md-card-actions>
+            </md-card>
+
+            <md-card layout-xs ="column" md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" >
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">Education Savings Group</span>
+                        <span class="md-subhead">For college-savings information, including details on 529s and education savings accounts</span>
+                        <br>
+                        <span class="">Contact: 777-777-7777</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                        <div class="md-media-lg card-media"></div>
+                    </md-card-title-media>
+                </md-card-title>
+                <md-card-actions layout="row" layout-align="end center">
+                    <md-button>Call</md-button>
+                    <md-button>Email</md-button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div flex-xs="" flex-gt-xs="50" layout="row" layout-sm="column" layout-xs="column" class="layout-row flex-xs flex-gt-xs-50">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">Voyager Technical Support</span>
+                        <span class="md-subhead">Call to configure you Device to properly consume site information</span>
+                        <br>
+                        <span class="">Contact: 333-333-333</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                        <div class="md-media-sm card-media"></div>
+                    </md-card-title-media>
+                </md-card-title>
+                <md-card-actions layout="row" layout-align="end center">
+                    <md-button>Call</md-button>
+                    <md-button>Email</md-button>
+                </md-card-actions>
+            </md-card>
+        </div>
+    </md-content>
+</div>
