--- a/demoApp/src/css/app.css
+++ b/demoApp/src/css/app.css
@@ -115,7 +115,7 @@
 .chat-window {
     width: 350px;
     height: 550px;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .chart{
@@ -193,3 +193,19 @@
 
 .carddemoBasicUsage .card-media {
   background-color: #999999; }
+
+  table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+  }
+
+  td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+  }
+
+  tr:nth-child(even) {
+      background-color: #dddddd;
+  }
