--- a/demoApp/src/templates/account.html
+++ b/demoApp/src/templates/account.html
@@ -1,27 +1,33 @@
-<h2 class="md-display-2">Account information</h2>
-<h3 class="md-subhead">Hi, John P Investor</h3>
-<div class = "accountHeader">
-    <div layout="row" class="zero headerRow">
-        <div class='accountTableHeader'>Account</div>
-        <div class='accountTableHeader'>Account Number</div>
-        <div class='accountTableHeader'>Balance</div>
+<div layout="column" layout-margin layout-padding class="md-whiteframe-7dp white-background">
+    <h2>Account overview</h2>
+    <h3>Welcome, Matthew</h3>
+    <div>Last logon: 08-27-2016</div>
+    <div layout-margin>
+        <table>
+            <thead>
+            <th>Plan name</th>
+            <th>Account Number</th>
+            <th>Balance</th>
+            </thead>
+            <tr>
+                <td>Voyager Retirement and Savings Plan</td>
+                <td>9489494949</td>
+                <td>$62,754.94</td>
+            </tr>
+            <tr>
+                <td>Total</td>
+                <td></td>
+                <td>$62,754.94</td>
+            </tr>
+        </table>
     </div>
-    <div layout="row" class="zero md-body-1">
-        <div class='accountTableItem'>Brokerage</div>
-        <div class='accountTableItem'>9489494949</div>
-        <div class='accountTableItem'>$400,909</div>
-    </div>
-    <div layout="row" class="zero md-body-1">
-        <div class='accountTableItem'>Retirement</div>
-        <div class='accountTableItem'>393939</div>
-        <div class='accountTableItem'>$133,300,909</div>
-    </div>
-
-    <div layout="row">
-        <div flex class='flex'>
+    <div>
+        <div>
             <h3>Performance</h3>
+        </div>
+        <div>
             <img class='chart' src='images/fakePerformance.jpg'/>
         </div>
     </div>
-
 </div>
+
