updates for Vanguard demo

--- a/demoApp/src/templates/account.html
+++ b/demoApp/src/templates/account.html
@@ -1,6 +1,6 @@
 <div layout="column" layout-margin layout-padding class="md-whiteframe-7dp white-background">
     <h2>Account overview</h2>
-    <h3>Welcome, Matthew</h3>
+    <h3>Welcome Matthew,</h3>
     <div>Last logon: 08-27-2016</div>
     <div layout-margin>
         <table>
@@ -10,7 +10,7 @@
             <th>Balance</th>
             </thead>
             <tr>
-                <td>Voyager Retirement and Savings Plan</td>
+                <td>Vanguard Retirement and Savings Plan</td>
                 <td>9489494949</td>
                 <td>$62,754.94</td>
             </tr>
