--- a/demoApp/src/templates/contact.html
+++ b/demoApp/src/templates/contact.html
@@ -6,7 +6,7 @@
             <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" >
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Voyager Call Center</span>
+                        <span class="md-headline">Vanguard Customer Support</span>
                         <span class="md-subhead">For information on mutual funds, IRAs, individual and joint accounts, and taxable accounts</span>
                         <br>
                         <span class="">Contact: 555-555-5555</span>
@@ -43,7 +43,7 @@
             <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Voyager Technical Support</span>
+                        <span class="md-headline">Vanguard Technical Support</span>
                         <span class="md-subhead">Call to configure you Device to properly consume site information</span>
                         <br>
                         <span class="">Contact: 333-333-333</span>
