--- a/demoApp/src/templates/home.html
+++ b/demoApp/src/templates/home.html
@@ -1,7 +1,7 @@
 <md-content class="ship-container bgi white-text" layout-padding hide-xs>
     <h1>Navigate the course to retirement</h1>
 
-    <h1>Start voyaging....</h1>
+    <h1>Start Vanguarding....</h1>
     <div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl">
         <div layout="row" layout-align="end end">
             <div class="demo-md-panel-content">
